# LENS

./: .gitignore  CLAUDE.md  TODO.md  architecture.md  docker-compose.yml  etf-arbitrage.md  features.md  internal-deploy.md  lp-system-design.md  ls-api.md  realtime-service.md  start_dev.sh  stat-arb-engine.md  stock-arbitrage.md  supply-demand.md
backend/: Dockerfile  main.py  requirements-win.txt  requirements.txt
backend/core/: app_state.py  config.py  database.py
backend/models/: market.py  portfolio.py
backend/routers/: arbitrage.py  borrowing.py  dividends.py  etfs.py  flow.py  lending.py  loan_rates.py  lp.py  market.py  permanent_sub.py  positions.py  repayment.py  stat_arb.py  stocks.py  ws.py
backend/schemas/: lending.py  repayment.py
backend/services/: borrowing_calculator.py  dividend_estimator.py  excel_reader.py  file_resolver.py  flow_metrics.py  futures_master.py  lending_calculator.py  lending_parser.py  loan_rates.py  pdf_futures_match.py  permanent_sub.py  positions.py  repayment_calculator.py  repayment_parser.py  risk_estimator.py  stock_code.py
data/: dividends_mock.json  futures_master.json  krx_holidays.json
docs/: MarketData (시세데이터).md  Repayment Program.py  chart-comparison.html  compare_external.py  compare_internal.py  etf_top200_korea.txt  internal_streaming.py  internal_streaming_kbm.py  통계차익 질문답변.txt
docs/ls_api_guide/: README.md  ls_api_full.md
docs/sessions/: 2026-05-16.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  globals.css  main.tsx
frontend/src/components/: OrderbookModal.tsx  copy-button.tsx
frontend/src/components/flow/: flow-detail.tsx
frontend/src/components/layout/: network-toggle.tsx  top-nav.tsx
frontend/src/components/lp/: BookFourNumbers.tsx  CostInputsPanel.tsx  FairValueMatrix.tsx  FreshnessBadge.tsx  PositionEntry.tsx  ResidualPanel.tsx  UnmappedPanel.tsx
frontend/src/components/stat-arb/: charts.tsx  loan-rates-panel.tsx  pnl-simulator.tsx  position-close-modal.tsx  position-entry-modal.tsx  timeframe-table.tsx
frontend/src/hooks/: useFeedHealth.ts  useLpInit.ts  usePageInavSubscriptions.ts  usePageOrderbookBulk.ts  usePageStockSubscriptions.ts  usePageSubscriptions.ts  usePageVolumePolling.ts  useWebSocket.ts
frontend/src/lib/: etf.ts  excel.ts  position-labels.ts  stat-arb-keys.ts  utils.ts
frontend/src/lib/stat-arb/: half-life.ts
frontend/src/pages/: borrowing.tsx  dashboard.tsx  dividends.tsx  etf-arbitrage.tsx  etf-dashboard.tsx  etf-layout.tsx  lending-availability.tsx  lending.tsx  loan-rates.tsx  lp-matrix.tsx  market.tsx  repayment-check.tsx  stat-arb-detail.tsx  stat-arb-layout.tsx  stat-arb-mn.tsx  stat-arb-position-detail.tsx  stat-arb-positions.tsx  stat-arb.tsx  stock-arbitrage.tsx  stock-flow.tsx
frontend/src/stores/: lpStore.ts  marketStore.ts
frontend/src/types/: lp.ts  market.ts  positions.ts  stat-arb.ts
realtime/: Cargo.toml  Dockerfile
realtime/src/: holidays.rs  main.rs  phase.rs  volume_cache.rs
realtime/src/calc/: book_risk.rs  mod.rs  pdf_basket.rs  scheduler.rs  stock_futures_intersect.rs
realtime/src/feed/: internal.rs  ls_api.rs  ls_rest.rs  mock.rs  mod.rs
realtime/src/model/: internal.rs  lp.rs  message.rs  mod.rs  tick.rs
realtime/src/ws/: broadcast.rs  handler.rs  mod.rs
scripts/: probe_t8407.py  probe_t8434.py  scrape_ls_api_guide.py
stat-arb-engine/: Cargo.toml  README.md
stat-arb-engine/src/: detail.rs  discovery.rs  groups.rs  holidays.rs  main.rs  phase.rs  stats.rs  universe.rs
stat-arb-engine/src/data/: bars.rs  mod.rs  pg_loader.rs
tools/ls_data_test/: Cargo.toml  README.md
tools/ls_data_test/src/: auth.rs  config.rs  http_ws.rs  ls_rest.rs  ls_ws.rs  main.rs  state.rs
tools/ls_data_test/static/: index.html
