[package]
name = "lens-realtime"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "6"
rand = "0.9"
tower-http = { version = "0.6", features = ["cors"] }
tokio-util = "0.7"
chrono = { version = "0.4", features = ["serde"] }
# Phase 2: LS API
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
native-tls = "0.2"
reqwest = { version = "0.12", features = ["json", "native-tls"] }
futures-util = "0.3"
dotenvy = "0.15"
