[package]
name = "stat-arb-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["cors"] }
tokio-util = "0.7"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "native-tls"] }
dotenvy = "0.15"
# DB — Finance_Data PG (read-only). asyncpg/sqlx 둘 다 가능하지만 Rust 표준은 sqlx.
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "postgres", "chrono", "bigdecimal", "macros"] }
# 수치 — Phase 2부터 본격 사용. Phase 1에선 선언만.
ndarray = "0.16"
# 빠른 lock-free 맵 (in-memory bar 캐시)
dashmap = "6"

# 핫패스 최적화: LTO + 단일 codegen-unit. realtime 컨벤션과 동일.
# 통계 엔진은 BLAS heavy라 inlining 이득 작지만, 일관성 + 산술 hot loop 일부 이득.
[profile.release]
lto = "fat"
codegen-units = 1
