[package]
name = "ls-data-test"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio             = { version = "1",    features = ["full"] }
axum              = { version = "0.8",  features = ["ws"] }
serde             = { version = "1",    features = ["derive"] }
serde_json        = "1"
tracing           = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# WS: native-tls 대신 rustls 사용.
# LS API WS 서버(9443)가 TLS 1.3 ClientHello를 거부하는데,
# native-tls의 max_protocol_version 제한이 이 Linux/OpenSSL 환경에서 동작하지 않음.
# rustls는 프로토콜 버전 제어가 명확하고 순수 Rust 구현이라 동작 예측 가능.
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
rustls            = { version = "0.23", features = ["ring"] }
rustls-native-certs = "0.8"

# REST: reqwest는 native-tls 유지 (port 8080 HTTP, TLS 문제 없음)
reqwest           = { version = "0.12", features = ["json", "native-tls"] }
native-tls        = "0.2"

futures-util      = "0.3"
dotenvy           = "0.15"
tower-http        = { version = "0.6",  features = ["cors"] }
chrono            = "0.4"

[profile.release]
lto           = "fat"
codegen-units = 1
